[package]
name = "resp-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
redis = { version = "*", features = ["tokio-comp"] }
num_cpus = "1.16.0"
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
enum_dispatch = "*"
async-trait = "0.1.75"
rand = { version = "0.8.5", features = [] }
zipf = "7.0.1"
